[package]
name = "live-object-sum"
authors = ["Topology Foundation <contact@topology.gg>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
live-object-sdk = { path = "../../live-object-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
codegen-units=1
panic = "abort"
overflow-checks = true
